--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -24,9 +24,9 @@
     "default_popup": "options.html",
     "default_title": "Options",
     "default_icon": {
-      "16": "icons/no-16.png",
-      "32": "icons/no-32.png",
-      "64": "icons/no-64.png"
+      "16": "icons/16.png",
+      "32": "icons/32.png",
+      "64": "icons/64.png"
     },
     "default_title": "ZuckFeedsBGone"
   },
