--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,8 +1,8 @@
 {
-  "description": "Remove the Facebook news feed and Instagram Explore feed.",
-  "manifest_version": 2,
   "name": "ZuckFeedsBGone",
-  "version": "1.0.0",
+  "description": "Spend less time on social media. Regain control of your attention with options to remove the Facebook news feed and more!",
+  "manifest_version": 2,
+  "version": "1.0.1",
   "homepage_url": "https://github.com/lawrencehook/ZuckFeedsBGone",
 
   "content_scripts": [
